tests/NormalTests/paczka1/fuzzy1/60883518.err
Error in line 4: S930 S930 69,7
Error in line 12: S930 S112 97,4
Error in line 21: g74S6Ymyql S112 -4,7
Error in line 18: DQ7moD2 S930 63,0
Error in line 30: S930 S930 44,4
Error in line 31: S930 S112 26,1
Error in line 32: C4b A624 5,5
Error in line 37: C4b S930 69,5
